--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,12 @@ export(start_a5)
 export(start_a6)
 export(start_a7)
 export(start_a8)
+export(start_b1)
+export(start_b2)
+export(start_b3)
+export(start_c1)
+export(start_c2)
+export(start_c3)
+export(start_c4)
+export(start_c5)
+export(start_c6)
