--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(start_g1)
 export(start_g2)
 export(start_g3)
 export(start_h2)
+export(stopp_b1)
 export(stopp_b2)
 export(stopp_b3)
 export(stopp_b5)
