--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(start_g3)
 export(start_h2)
 export(stopp_b1)
 export(stopp_b10)
+export(stopp_b11)
 export(stopp_b2)
 export(stopp_b3)
 export(stopp_b4)
