--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(stopp_b6)
 export(stopp_b7)
 export(stopp_b9)
 export(stopp_c10)
+export(stopp_c11)
 export(stopp_c2)
 export(stopp_c5)
 export(stopp_c7)
