--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,8 @@ export(stopp_c5)
 export(stopp_c7)
 export(stopp_c8)
 export(stopp_d1)
+export(stopp_d12)
+export(stopp_d14)
 export(stopp_d3)
 export(stopp_d5)
 export(stopp_d8)
