--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(start_b1)
 export(start_c1)
 export(start_c2)
 export(start_c3a)
+export(start_c3b)
 export(start_c4)
 export(start_c5)
 export(start_c6)
