--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(start_d1)
 export(start_d2)
 export(start_e1)
 export(start_e2)
+export(start_e3)
 export(start_e4)
 export(start_e6)
 export(start_e7)
