--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(start_e1)
 export(start_e2)
 export(start_e3)
 export(start_e4)
+export(start_e5)
 export(start_e6)
 export(start_e7)
 export(start_g1)
