--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(stopp_c2)
 export(stopp_c5)
 export(stopp_c7)
 export(stopp_c8)
+export(stopp_c9)
 export(stopp_d1)
 export(stopp_d12)
 export(stopp_d14)
