--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(stopp_d1)
 export(stopp_d12)
 export(stopp_d14)
 export(stopp_d3)
+export(stopp_d4)
 export(stopp_d5)
 export(stopp_d8)
 export(stopp_f1)
