--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(stopp_d14)
 export(stopp_d3)
 export(stopp_d4)
 export(stopp_d5)
+export(stopp_d6)
 export(stopp_d8)
 export(stopp_f1)
 export(stopp_f3)
