--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(stopp_d4)
 export(stopp_d5)
 export(stopp_d6)
 export(stopp_d8)
+export(stopp_e1)
 export(stopp_f1)
 export(stopp_f3)
 export(stopp_g1)
