--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(stopp_d6)
 export(stopp_d8)
 export(stopp_e1)
 export(stopp_e2)
+export(stopp_e3)
 export(stopp_f1)
 export(stopp_f3)
 export(stopp_g1)
