--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,8 @@ export(stopp_d8)
 export(stopp_e1)
 export(stopp_e2)
 export(stopp_e3)
+export(stopp_e4)
+export(stopp_e5)
 export(stopp_f1)
 export(stopp_f3)
 export(stopp_g1)
