--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(stopp_e2)
 export(stopp_e3)
 export(stopp_e4)
 export(stopp_e5)
+export(stopp_e6)
 export(stopp_f1)
 export(stopp_f3)
 export(stopp_g1)
