--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(start_h2)
 export(stopp_b1)
 export(stopp_b10)
 export(stopp_b11)
+export(stopp_b13a)
 export(stopp_b2)
 export(stopp_b3)
 export(stopp_b4)
