--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(stopp_b1)
 export(stopp_b10)
 export(stopp_b11)
 export(stopp_b13a)
+export(stopp_b13b)
 export(stopp_b2)
 export(stopp_b3)
 export(stopp_b4)
