--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(stopp_b5)
 export(stopp_b6)
 export(stopp_b7)
 export(stopp_b9)
+export(stopp_c1)
 export(stopp_c10)
 export(stopp_c11)
 export(stopp_c2)
