--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(stopp_b4)
 export(stopp_b5)
 export(stopp_b6)
 export(stopp_b7)
+export(stopp_b8)
 export(stopp_b9)
 export(stopp_c1)
 export(stopp_c10)
@@ -66,6 +67,7 @@ export(stopp_e4)
 export(stopp_e5)
 export(stopp_e6)
 export(stopp_f1)
+export(stopp_f2)
 export(stopp_f3)
 export(stopp_g1)
 export(stopp_g2)
@@ -77,6 +79,7 @@ export(stopp_h6)
 export(stopp_h7)
 export(stopp_h8)
 export(stopp_h9)
+export(stopp_i1)
 export(stopp_i2)
 export(stopp_j1)
 export(stopp_j2)
