--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(stopp_d4)
 export(stopp_d5)
 export(stopp_d6)
 export(stopp_d8)
+export(stopp_d9)
 export(stopp_e1)
 export(stopp_e2)
 export(stopp_e3)
