--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(stopp_c7)
 export(stopp_c8)
 export(stopp_c9)
 export(stopp_d1)
+export(stopp_d10)
 export(stopp_d12)
 export(stopp_d14)
 export(stopp_d3)
