--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(stopp_c8)
 export(stopp_c9)
 export(stopp_d1)
 export(stopp_d10)
+export(stopp_d11)
 export(stopp_d12)
 export(stopp_d14)
 export(stopp_d3)
