--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(stopp_d1)
 export(stopp_d10)
 export(stopp_d11)
 export(stopp_d12)
+export(stopp_d13)
 export(stopp_d14)
 export(stopp_d3)
 export(stopp_d4)
@@ -73,6 +74,7 @@ export(stopp_f2)
 export(stopp_f3)
 export(stopp_g1)
 export(stopp_g2)
+export(stopp_g4)
 export(stopp_h1)
 export(stopp_h2)
 export(stopp_h4)
