--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(stopp_d3)
 export(stopp_d4)
 export(stopp_d5)
 export(stopp_d6)
+export(stopp_d7)
 export(stopp_d8)
 export(stopp_d9)
 export(stopp_e1)
