--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(all_stoppstart)
 export(check_matches)
+export(check_matches2)
 export(start_a1)
 export(start_a3)
 export(start_a4)
@@ -73,6 +74,7 @@ export(stopp_e6)
 export(stopp_f1)
 export(stopp_f2)
 export(stopp_f3)
+export(stopp_f4)
 export(stopp_g1)
 export(stopp_g2)
 export(stopp_g4)
@@ -97,3 +99,4 @@ export(stopp_k3)
 export(stopp_k4)
 export(stopp_l2)
 export(stopp_l3)
+export(stopp_m1)
