--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(all_stoppstart)
 export(check_matches)
 export(check_matches2)
+export(msc_stoppstart)
 export(start_a1)
 export(start_a3)
 export(start_a4)
